--- a/newDesign/css/nav.css
+++ b/newDesign/css/nav.css
@@ -292,16 +292,20 @@ p,div{
         display: block;
     }
     .footer .socialLinks span:last-child {
-        margin-top: 20px;
     }
-    .footer .socialLinks a.fb {
-        margin-left: 0px;
+    .footer .socialLinks a {
+        display: block;
+        text-align: left;
+        margin: 0 !important;
     }
     .footer .socialLinks a.linked {
         margin-left: 28px;
         margin-right: 15px;
     }
     .footer .footerNav {
-        padding: 0 5px;
+        padding: 5px 5px;
+        width: 100%;
+        display: block;
+        text-align: left;
     }
 }
