shop.html page - change

--- a/newDesign/css/index.css
+++ b/newDesign/css/index.css
@@ -163,6 +163,8 @@ body {background-color: #fff;}
     font-weight: 600;
     line-height: 30px;
     text-align: left;
+    -webkit-text-stroke: 0.2px #fff;
+    color: #3C465A;
 }
 
 .downloadApp {
@@ -225,6 +227,53 @@ body {background-color: #fff;}
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
     margin-right: 20px;
     display: inline-block;
+}
+.byCategory .marketToProvide {
+    height: 120px;
+    border: 2px solid #4A4A4A;
+    border-radius: 4px;
+    background-color: rgba(255,255,255,0);
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
+    padding: 10px;
+    margin: 0 30px 30px 0;
+    background-size:     cover;                      /* <------ */
+    background-repeat:   no-repeat;
+    background-position: center center;
+}
+
+.marketToProvide.cat-1{
+    background-image: url(../images/categoryPics/Health.jpg);
+}
+.marketToProvide.cat-2{
+    background-image: url(../images/categoryPics/Fashion.jpg);
+}
+.marketToProvide.cat-3{
+    /*background-image: url(../images/categoryPics/Health.jpg);*/
+}
+.marketToProvide.cat-4{
+    background-image: url(../images/categoryPics/Beauty.jpg);
+}
+.marketToProvide.cat-5{
+    background-image: url(../images/categoryPics/Trades-and-Services.jpg);
+}
+.marketToProvide.cat-6{
+    background-image: url(../images/categoryPics/Auto.jpg);
+}
+.marketToProvide.cat-7{
+    background-image: url(../images/categoryPics/Home-and-Garden.jpg);
+}
+.marketToProvide.cat-8{
+    background-image: url(../images/categoryPics/Dental.jpg);
+}
+.marketToProvide.cat-9{
+    background-image: url(../images/categoryPics/Sports-Outdoors.jpg);
+}
+
+
+.byCategory .marketToProvide:hover,
+.brand:hover {
+    cursor: pointer;
+    box-shadow: 1px 2px 5px 0 rgba(0,0,0,0.5);
 }
 
 
