--- a/newDesign/css/index.css
+++ b/newDesign/css/index.css
@@ -201,7 +201,7 @@ body {background-color: #fff;}
     width: 134.63px;
 }
 
-.instagram {
+.instagram, .noInstagram {
     max-width: 1240px;
     text-align: left;
     margin: 0 auto;
