--- a/newDesign/css/index.css
+++ b/newDesign/css/index.css
@@ -235,7 +235,7 @@ body {background-color: #fff;}
     background-color: rgba(255,255,255,0);
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
     padding: 10px;
-    margin: 0 30px 30px 0;
+    margin: 0 16px 30px;
     background-size:     cover;                      /* <------ */
     background-repeat:   no-repeat;
     background-position: center center;
