--- a/newDesign/css/nav.css
+++ b/newDesign/css/nav.css
@@ -5,7 +5,6 @@ html { box-sizing: border-box; }
 *, *:before, *:after { box-sizing: inherit; }
 ol, ul { list-style: none; font-weight: 300;}
 a { color: inherit; text-decoration: none; }
-
 h1, h2, h3, h4, h5, h6, body, a, p, ol, ul {
     margin: 0;
     padding: 0;
@@ -308,4 +307,8 @@ p,div{
         display: block;
         text-align: left;
     }
+}
+
+@media (max-width: 650px) {
+    table td, table th { display: block}
 }
