--- a/newDesign/css/shop.css
+++ b/newDesign/css/shop.css
@@ -242,8 +242,8 @@ body {
 }
 
 .byCategory .marketToProvide {
+    display: flex;
     height: 120px;
-    border: 2px solid #4A4A4A;
     border-radius: 4px;
     background-color: rgba(255,255,255,0);
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
@@ -290,14 +290,14 @@ body {
 }
 
 .byCategory .marketToProvide h3 {
-    color: #3C465A;
+    align-self: flex-end;
+    color: white;
     font-size: 20px;
     font-weight: 600;
     line-height: 30px;
     text-align: left;
     color: #fff;
     -webkit-text-stroke: 0.2px #fff;
-    color: #3C465A;
 }
 
 .featured-brand {
