Better hover for box shadow. Added Transition

--- a/newDesign/css/index.css
+++ b/newDesign/css/index.css
@@ -239,6 +239,7 @@ body {background-color: #fff;}
     background-size:     cover;                      /* <------ */
     background-repeat:   no-repeat;
     background-position: center center;
+    transition: box-shadow .2s;
 }
 
 .marketToProvide.cat-1{
