--- a/newDesign/css/shop.css
+++ b/newDesign/css/shop.css
@@ -249,9 +249,10 @@ body {
     box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
     padding: 10px;
     margin: 0 30px 30px 0;
-    background-size:     cover;                      /* <------ */
+    background-size:     cover;                 
     background-repeat:   no-repeat;
     background-position: center center;
+    transition: box-shadow .2s;
 }
 
 .marketToProvide.cat-1{
