--- a/newDesign/css/index.css
+++ b/newDesign/css/index.css
@@ -168,14 +168,14 @@ body {background-color: #fff;}
 }
 
 .downloadApp {
-    background-color: #3C465A;
-    color: #fff;
+    background-color: #fff;
+    color: #3C465A;
     padding: 80px 30px;
     text-align: center;
 }
 
 .downloadApp h1 {
-    color: #FFFFFF;
+    /*color: #FFFFFF;*/
     font-size: 32px;
     font-weight: 600;
     line-height: 44px;
@@ -184,7 +184,7 @@ body {background-color: #fff;}
 
 .downloadApp p {
     max-width: 570px;
-    color: #FFFFFF;
+    /*color: #FFFFFF;*/
     font-size: 16px;
     font-weight: 300;
     line-height: 26px;
