--- a/newDesign/css/3forfree.css
+++ b/newDesign/css/3forfree.css
@@ -190,6 +190,14 @@ body {background-color: #fff;}
 }
 
 
+.termsAnd{
+    max-width: 1200px;
+    font-size: 12px;
+    margin: auto;
+    padding-bottom: 40px;
+    text-align: center;
+}
+
 
 
 
