--- a/src/css/how.css
+++ b/src/css/how.css
@@ -36,6 +36,25 @@ body {background-color: #fff;}
     margin-top: 34px;
 }
 
+.btnBox {
+    padding-top: 20px;
+    background-color: #2864FF;
+    color: #fff;
+    text-align: center;
+    display: inline-block;
+    border-radius: 8px;
+    padding: 10px 10px;
+    margin-top: 20px;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: -0.44px;
+}
+
+.btnBox a {
+    font-weight: 600;
+    padding: 0 8px;
+}
+
 .intrigued {
     background-color: #F4F7FF;
     margin-top: 0px;
