--- a/src/css/business.css
+++ b/src/css/business.css
@@ -37,6 +37,7 @@ body {background-color: #fff;}
     margin-top: 34px;
 }
 .heroBusinessContainer .btnBox {
+    border: 2px solid #2864FF;
     background-color: #2864FF;
     color: #fff;
     text-align: center;
@@ -50,6 +51,24 @@ body {background-color: #fff;}
 }
 
 .heroBusinessContainer .btnBox a {
+    font-weight: 600;
+    padding: 0 8px;
+}
+
+.heroBusinessContainer .btnBoxContact {
+    border: 2px solid #2864FF;
+    color: #fff;
+    text-align: center;
+    display: inline-block;
+    border-radius: 8px;
+    padding: 10px 10px;
+    margin-top: 20px;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: -0.44px;
+}
+
+.heroBusinessContainer .btnBoxContact a {
     font-weight: 600;
     padding: 0 8px;
 }
@@ -335,5 +354,11 @@ body {background-color: #fff;}
         display: inline;
         margin: 10px 20px;
         height: 40px;
+    }
+}
+    @media (max-width: 380px) {
+    .heroBusinessContainer{
+        height:600px;
+    }
     }
 }
