--- a/src/css/how.css
+++ b/src/css/how.css
@@ -245,4 +245,9 @@ body {background-color: #fff;}
         width: 100%;
         padding-bottom: 20px;
     }
+    @media (max-width: 380px) {
+    .heroHowContainer{
+        height:430px;
+    }
+    }
 }
