--- a/src/css/business.css
+++ b/src/css/business.css
@@ -56,7 +56,7 @@ body {background-color: #fff;}
 }
 
 .heroBusinessContainer .btnBoxContact {
-    border: 2px solid #2864FF;
+    border: 2px solid #ffffff;
     color: #fff;
     text-align: center;
     display: inline-block;
