--- a/src/css/business.css
+++ b/src/css/business.css
@@ -215,6 +215,7 @@ body {background-color: #fff;}
     padding: 80px 0;
 }
 
+
 .trustedLeaders h1, .everywereYourCostumers h1 {
     color: #3C465A;
     text-align: left;
@@ -302,6 +303,31 @@ body {background-color: #fff;}
 .readyRegister .btnBox a {
     padding: 0 8px;
 }
+.everywereYourCostumers .btnBox {
+    max-width: 220px;
+    background-color: #2864FF;
+    color: #fff;
+    text-align: center;
+    /*display: inline-block;*/
+    border-radius: 8px;
+    padding: 10px 10px;
+    margin-top: 20px;
+    font-size: 14px;
+    font-weight: 600;
+    letter-spacing: -0.44px;
+}
+
+.everywereYourCostumers .btnBox a {
+    padding: 0 8px;
+}
+
+.everywereYourCostumers .col-2 img {
+    width: 400px;
+    height: 400px;
+}
+.margin{
+    margin-top: 80px;
+}
 
 @media (max-width: 1280px) {
     .whyUseOpenpay .col-4 {
@@ -355,10 +381,23 @@ body {background-color: #fff;}
         margin: 10px 20px;
         height: 40px;
     }
+    .margin {
+        display: none;
+    }
 }
     @media (max-width: 375px) {
     .heroBusinessContainer{
         height:500px;
+    }
+    .margin {
+        display: none;
+    }
+    .everywereYourCostumers .col-2 img {
+    width: 300px;
+    height: 300px;
+    }
+    .everywereYourCostumers {
+    padding-bottom: 0px;    
     }
 }
  @media (max-width: 320px) {
