--- a/src/css/business_uk.css
+++ b/src/css/business_uk.css
@@ -114,7 +114,7 @@ a, a:hover {
     font-family: "PoppinsSemiBold", sans-serif;
     line-height: 23px;
     font-weight: 600;
-    text-align: left;
+    text-align: center;
     color: #3B455A; }
 
 .btn-primary {
